# nest-simulator

./: .gitignore  CMakeLists.txt
cmake/: ConfigureSummary.cmake  ProcessOptions.cmake
libnestutil/: config.h.in  dict_util.h  dictionary.cpp  dictionary.h  logging.h  numerics.cpp
miniapp/: CMakeLists.txt  main.cpp  main_1.cpp
models/: aeif_cond_alpha.cpp  aeif_cond_alpha.h  aeif_cond_alpha_multisynapse.cpp  aeif_cond_beta_multisynapse.cpp  aeif_psc_alpha.cpp  aeif_psc_alpha.h  bernoulli_synapse.h  clopath_synapse.h  cm_compartmentcurrents.cpp  cm_compartmentcurrents.h  cm_default.cpp  cm_tree.cpp  cont_delay_synapse_impl.h  correlation_detector.cpp  diffusion_connection.h  eprop_learning_signal_connection.h  eprop_learning_signal_connection_bsshslm_2020.h  eprop_synapse.cpp  eprop_synapse.h  eprop_synapse_bsshslm_2020.cpp  eprop_synapse_bsshslm_2020.h  flexible_data_connection.cpp  flexible_data_connection.h  gap_junction.h  gif_cond_exp.cpp  gif_cond_exp_multisynapse.cpp  gif_pop_psc_exp.cpp  gif_psc_exp.cpp  gif_psc_exp_multisynapse.cpp  glif_cond.cpp  glif_psc.cpp  glif_psc_double_alpha.cpp  ht_synapse.h  iaf_chs_2007.cpp  iaf_cond_alpha_mc.cpp  iaf_psc_alpha_multisynapse.cpp  iaf_psc_exp.cpp  iaf_psc_exp_multisynapse.cpp  iaf_tum_2000.cpp  inhomogeneous_poisson_generator.cpp  (+54 more)
modelsets/: full
nestkernel/: archiving_node.cpp  buffer_resize_log.cpp  clopath_archiving_node.cpp  common_properties_hom_w.h  common_synapse_properties.cpp  conn_builder.cpp  conn_builder_conngen.cpp  connection.h  connection_creator.cpp  connection_label.h  connection_manager.cpp  connection_manager.h  connection_manager_impl.h  connector_model_impl.h  delay_checker.cpp  device.cpp  event.cpp  event.h  event_delivery_manager.cpp  event_delivery_manager.h  free_layer.h  mask.h  (+54 more)
(+24 files in other folders)
